<resources>

    <string name="app_name">Smart Parking App</string>
    <string name="Rs">\u20B9</string>
    <string name="bill">BILL</string>
    <string name="entry_time">ENTRY TIME :</string>
    <string name="exit_time">EXIT TIME :</string>
    <string name="payment_amount">PAYMENT AMOUNT</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="out">OUT</string>
    <string name="in">IN</string>
    <string name="hey">Hey,</string>
    <string name="vehicle_image">Vehicle image</string>
    <string name="enter_info">Enter Info</string>
    <string name="history_image">History image</string>
    <string name="history">History</string>
    <string name="no_of_slots_available">No. of Slots Available</string>
    <string name="address">Address</string>
    <string name="total_space">Total Space:</string>
    <string name="available_space">Available Space:</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_e_park">Login to E-park</string>
    <string name="e_park">E park</string>
    <string name="logo">logo</string>
    <string name="not_registered_register_here">Don’t have an account? Register here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_page">Login Page</string>
    <string name="view_parking_space">Parking Spaces</string>
    <string name="create_new_account">Create new Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="building">Building</string>
    <string name="area">Area</string>
    <string name="total_space_available">Total Space Available</string>
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="register">Register</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="parked_vehicles">Parked Vehicles</string>
    <string name="aa_00_bb_1111">AA-00-BB-1111</string>
    <string name="_000">000</string>
    <string name="logout">Logout</string>

</resources>