<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp">

    <LinearLayout
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/building"
            style="@style/TextViewStyle.AvailableSlotsItem"
            android:text="@string/building"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_building" />

        <TextView
            android:id="@+id/address"
            style="@style/TextViewStyle.AvailableSlotsItem"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:drawableLeftCompat="@drawable/ic_address" />

        <TextView
            android:id="@+id/total_space"
            style="@style/TextViewStyle.AvailableSlotsItem"
            android:text="@string/total_space"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/available_space"
            style="@style/TextViewStyle.AvailableSlotsItem"
            android:text="@string/available_space"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>