<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="144dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/car_48px"
        android:drawableLeft="@drawable/car_48px"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/enter_vehicle_number"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="13"
        android:paddingStart="12dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/pc1"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_marginBottom="60dp"
        android:onClick="inPage"
        app:cardBackgroundColor="#ccffff"
        app:layout_constraintBottom_toTopOf="@id/pc2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pc2"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:onClick="outPage"
        app:cardBackgroundColor="#ccffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>